--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -15,13 +15,13 @@ pipeline {
                 cd prm
                 tox -e package
                 '''
-                stash(name: "wrappers", includes: "dist/**")
-                archiveArtifacts(artifacts: "dist/**")
+                stash(name: "wrappers", includes: "prm/dist/**")
+                archiveArtifacts(artifacts: "prm/dist/**")
             }
             post {
                 always {
                     sh '''
-                    rm -fr dist
+                    rm -fr prm/dist
                     '''
                 }
             }
