--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -26,5 +26,13 @@ pipeline {
                 }
             }
         }
+        stege("Build aurora-cli Docker image") {
+            steps {
+                sh '''
+                IMAGE_NAME=${DOCKER_REPOSITORY_URL}/owca/aurora-cli:${GIT_COMMIT}
+                docker build -t ${IMAGE_NAME} -f ${WORKSPACE}/prm/build/Dockerfile ${WORKSPACE}/prm
+                docker push ${IMAGE_NAME}
+            }
+        }
     }
 }
