--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
                 cd prm
                 tox -e package
                 '''
-                stash(name: "wrappers", includes: "prm/dist/**")
+                stash(name: "owca-prm", includes: "prm/dist/**")
                 archiveArtifacts(artifacts: "prm/dist/**")
             }
             post {
@@ -32,6 +32,7 @@ pipeline {
                 IMAGE_NAME=${DOCKER_REPOSITORY_URL}/owca/aurora-cli:${GIT_COMMIT}
                 docker build -t ${IMAGE_NAME} -f ${WORKSPACE}/prm/build/Dockerfile ${WORKSPACE}/prm
                 docker push ${IMAGE_NAME}
+                '''
             }
         }
     }
