--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -3,6 +3,10 @@ pipeline {
     environment {
         DOCKER_REPOSITORY_URL = credentials('DOCKER_REPOSITORY_URL')
         AURORA_CLI_CONFIGURATION = credentials('clusters.json')
+        INVENTORY = credentials('inventory.yml')
+        DEFAULT_PLAYBOOK=/prm/owca/workloads/run_workloads.yaml
+        DEFAULT_INVENTORY=/prm/inventory.yaml
+        LLC_INVENTORY=/prm/demo_scenarios/complex_llc.0/inventory.yaml
     }
     stages {
         stage("Run flake8 on PRM") {
@@ -34,6 +38,7 @@ pipeline {
             steps {
                 sh '''
                 cp ${AURORA_CLI_CONFIGURATION} ${WORKSPACE}/prm/clusters.json
+                CP ${INVENTORY} ${WORKSPACE}/prm/inventory.yaml
                 IMAGE_NAME=${DOCKER_REPOSITORY_URL}/owca/aurora-cli:${GIT_COMMIT}
                 docker build -t ${IMAGE_NAME} -f ${WORKSPACE}/prm/build/Dockerfile ${WORKSPACE}/prm
                 docker push ${IMAGE_NAME}
@@ -42,7 +47,29 @@ pipeline {
             post {
                 always {
                     sh '''
-                    rm -fr ${WORKSPACE}/prm/clusters.json
+                    rm -fr ${WORKSPACE}/prm/clusters.json ${WORKSPACE}/prm/inventory.yaml
+                    '''
+                }
+            }
+        }
+        stage("Run LLC experiment") {
+            agent {
+                docker {
+                    image 'owca/aurora-cli'
+                    label '${GIT_COMMIT}'
+                    registryUrl '${DOCKER_REPOSITORY_URL}'
+                }
+            }
+            steps {
+                sh '''
+                ansible-playbook -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
+                '''
+            }
+            post {
+                always {
+                    sh '''
+                    aurora job list example | xargs aurora job killall
+                    ansible-playbook -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=clean_jobs -v
                     '''
                 }
             }
