--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
             steps {
                 sh '''
                 cp ${AURORA_CLI_CONFIGURATION} ${WORKSPACE}/prm/clusters.json
-                CP ${INVENTORY} ${WORKSPACE}/prm/inventory.yaml
+                cp ${INVENTORY} ${WORKSPACE}/prm/inventory.yaml
                 IMAGE_NAME=${DOCKER_REPOSITORY_URL}/owca/aurora-cli:${GIT_COMMIT}
                 docker build -t ${IMAGE_NAME} -f ${WORKSPACE}/prm/build/Dockerfile ${WORKSPACE}/prm
                 docker push ${IMAGE_NAME}
