--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         INVENTORY = credentials('inventory.yml')
         PRM_SUT = credentials('PRM_SUT')
 
+        ANY_ERRORS_FATAL='True'
         DEFAULT_LOCAL_TMP="/tmp/ansible/${GIT_COMMIT}"
         PLAYBOOK='/prm/owca/workloads/run_workloads.yaml'
         DEFAULT_INVENTORY='/prm/inventory.yaml'
@@ -64,6 +65,7 @@ pipeline {
             }
             steps {
                 sh '''
+                env
                 ansible-playbook -l ${PRM_SUT} -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
                 '''
             }
