--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
         INVENTORY = credentials('inventory.yml')
         PRM_SUT = credentials('PRM_SUT')
 
-        ANY_ERRORS_FATAL='True'
-        DEFAULT_LOCAL_TMP="/tmp/ansible/${GIT_COMMIT}"
+        ANSIBLE_ANY_ERRORS_FATAL='True'
+        ANSIBLE_DEFAULT_LOCAL_TMP="/tmp/ansible"
         PLAYBOOK='/prm/owca/workloads/run_workloads.yaml'
         DEFAULT_INVENTORY='/prm/inventory.yaml'
         LLC_INVENTORY='/prm/demo_scenarios/complex_llc.0/inventory.yaml'
@@ -65,7 +65,6 @@ pipeline {
             }
             steps {
                 sh '''
-                env
                 ansible-playbook -l ${PRM_SUT} -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
                 '''
             }
