--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
         ANSIBLE_ANY_ERRORS_FATAL='True'
         ANSIBLE_INVENTORY_UNPARSED_FAILED='True'
-        ANSIBLE_LOCAL_TMP='/tmp/ansible'
+        ANSIBLE_LOCAL_TMP='/tmp/ansible-local'
         ANSIBLE_REMOTE_TMP='/tmp/ansible-remote'
         PLAYBOOK='/prm/owca/workloads/run_workloads.yaml'
         DEFAULT_INVENTORY='/prm/inventory.yaml'
@@ -67,6 +67,7 @@ pipeline {
             }
             steps {
                 sh '''
+                env
                 ansible-playbook -l ${PRM_SUT} -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
                 '''
             }
