Using /etc/ansible instead of environment variables

--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -6,10 +6,6 @@ pipeline {
         INVENTORY = credentials('inventory.yml')
         PRM_SUT = credentials('PRM_SUT')
 
-        ANSIBLE_ANY_ERRORS_FATAL='True'
-        ANSIBLE_INVENTORY_UNPARSED_FAILED='True'
-        ANSIBLE_LOCAL_TEMP='/tmp/ansible-local'
-        ANSIBLE_REMOTE_TEMP='/tmp/ansible-remote'
         PLAYBOOK='/prm/owca/workloads/run_workloads.yaml'
         DEFAULT_INVENTORY='/prm/inventory.yaml'
         LLC_INVENTORY='/prm/demo_scenarios/complex_llc.0/inventory.yaml'
@@ -73,7 +69,7 @@ pipeline {
             post {
                 always {
                     sh '''
-                    ansible-playbook -vvv -l ${PRM_SUT} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=clean_jobs -v
+                    ansible-playbook -vvv -l ${PRM_SUT} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=clean_jobs
                     '''
                 }
             }
