--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -63,6 +63,7 @@ pipeline {
             }
             steps {
                 sh '''
+                ls -la /prm
                 ansible-playbook -vvv -l ${PRM_SUT} -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
                 '''
             }
