--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -41,6 +41,7 @@ pipeline {
                 sh '''
                 cp ${AURORA_CLI_CONFIGURATION} ${WORKSPACE}/prm/clusters.json
                 cp ${INVENTORY} ${WORKSPACE}/prm/inventory.yaml
+                chmod 644 ${WORKSPACE}/prm/inventory.yaml
                 IMAGE_NAME=${DOCKER_REPOSITORY_URL}/owca/aurora-cli:${GIT_COMMIT}
                 docker build -t ${IMAGE_NAME} -f ${WORKSPACE}/prm/build/Dockerfile ${WORKSPACE}/prm
                 docker push ${IMAGE_NAME}
