--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -65,6 +65,9 @@ pipeline {
             steps {
                 sh '''
                 ls -la /prm
+                echo $UID
+                ps aux
+                hostname
                 ansible-playbook -vvv -l ${PRM_SUT} -i ${LLC_INVENTORY} -i ${DEFAULT_INVENTORY} ${PLAYBOOK} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra
                 '''
             }
