Revert "Removing dirs from /tmp"
This reverts commit 418b28ff37a400d7465dac4b56721752056d6145.

--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -57,7 +57,7 @@ pipeline {
         stage("Run LLC experiment") {
             agent {
                 docker {
-                    image "owca/aurora-cli:debug-2"
+                    image "owca/aurora-cli:debug"
                     registryUrl "http://${DOCKER_REPOSITORY_URL}"
                 }
             }
