--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         LLC_INVENTORY='/prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='/prm/demo_scenarios/complex_mbw.0/inventory.yaml'
 
-        labels="{\"build_number\": ${BUILD_NUMBER}, \"build_node_name\": \"${NODE_NAME}\", \"build_commit\": \"${GIT_COMMIT}\"}"
+        LABELS="{\"build_number\": ${BUILD_NUMBER}, \"build_node_name\": \"${NODE_NAME}\", \"build_commit\": \"${GIT_COMMIT}\"}"
     }
     options {
         disableConcurrentBuilds()
