--- a/prm/Pipfile
+++ b/prm/Pipfile
@@ -20,6 +20,7 @@ confluent-kafka = "==0.11.4"
 [dev-packages]
 pex = "==1.5.1"
 tox = "==3.5.2"
+pytest = "==4.3.0"
 
 [requires]
 python_version = "3.6"
