--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -1,22 +1,24 @@
 [tox]
-envlist = flake8,package
+envlist = flake8,unit,package
 
 [testenv]
 basepython = python3.6
 
 [testenv:flake8]
-deps = flake8==3.6.0
-commands = flake8 prm owca
+whitelist_externals = pipenv
+commands = pipenv run flake8 prm owca
+
+[testenv:unit]
+whitelist_externals = pipenv
+commands = pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
 
 [testenv:package]
 noinstall = True
 whitelist_externals = 
     rm
     sh
-deps = 
-    pex 
-    requests
+    pipenv
 commands = 
     -sh -c 'rm .pex-build/prm* .pex-build/owca*'
-    pex . owca -v --cache-dir=.pex-build {env:PEX_OPTIONS:} --output=dist/owca-prm.pex -m owca.main:main 
+    pipenv run pex . owca -v --cache-dir=.pex-build {env:PEX_OPTIONS:} --output=dist/owca-prm.pex -m owca.main:main
 
