Making sure that dependencies are installed

--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -6,11 +6,15 @@ basepython = python3.6
 
 [testenv:flake8]
 whitelist_externals = pipenv
-commands = pipenv run flake8 prm owca
+commands =
+    pipenv install
+    pipenv run flake8 prm owca
 
 [testenv:unit]
 whitelist_externals = pipenv
-commands = pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
+commands =
+    pipenv install
+    pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
 
 [testenv:package]
 noinstall = True
@@ -20,5 +24,6 @@ whitelist_externals =
     pipenv
 commands = 
     -sh -c 'rm .pex-build/prm* .pex-build/owca*'
+    pipenv install
     pipenv run pex . owca -v --cache-dir=.pex-build {env:PEX_OPTIONS:} --output=dist/owca-prm.pex -m owca.main:main
 
