--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -7,13 +7,13 @@ basepython = python3.6
 [testenv:flake8]
 whitelist_externals = pipenv
 commands =
-    pipenv install
+    pipenv install --dev
     pipenv run flake8 prm owca
 
 [testenv:unit]
 whitelist_externals = pipenv
 commands =
-    pipenv install
+    pipenv install --dev
     pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
 
 [testenv:package]
@@ -24,6 +24,6 @@ whitelist_externals =
     pipenv
 commands = 
     -sh -c 'rm .pex-build/prm* .pex-build/owca*'
-    pipenv install
+    pipenv install --dev
     pipenv run pex . owca -v --cache-dir=.pex-build {env:PEX_OPTIONS:} --output=dist/owca-prm.pex -m owca.main:main
 
