Cleaning unknown packages and reinstalling required ones

--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -7,13 +7,15 @@ basepython = python3.6
 [testenv:flake8]
 whitelist_externals = pipenv
 commands =
-    pipenv install --dev
+    pipenv clean
+    pipenv install --dev --deploy
     pipenv run flake8 prm owca
 
 [testenv:unit]
 whitelist_externals = pipenv
 commands =
-    pipenv install --dev
+    pipenv clean
+    pipenv install --dev --deploy
     pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
 
 [testenv:package]
@@ -22,8 +24,9 @@ whitelist_externals =
     rm
     sh
     pipenv
-commands = 
+commands =
     -sh -c 'rm .pex-build/prm* .pex-build/owca*'
-    pipenv install --dev
+    pipenv clean
+    pipenv install --dev --deploy
     pipenv run pex . owca -v --cache-dir=.pex-build {env:PEX_OPTIONS:} --output=dist/owca-prm.pex -m owca.main:main
 
