--- a/prm/Pipfile
+++ b/prm/Pipfile
@@ -8,7 +8,6 @@ scikit-learn = "==0.20.0"
 sklearn = "==0.0"
 scipy = "==1.1.0"
 pandas = "==0.23.4"
-
 # owca depedencies based owca/Pipfile
 "ruamel.yaml" = "==0.15.37"
 logging-tree = "==1.7"
@@ -16,6 +15,7 @@ colorlog = "==3.1.4"
 dataclasses = "==0.6"
 requests = "==2.19.1"
 confluent-kafka = "==0.11.4"
+prm = {editable = true,path = "."}
 
 [dev-packages]
 pex = "==1.5.1"
