--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -10,8 +10,8 @@ pipeline {
         LLC_INVENTORY='/prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='/prm/demo_scenarios/complex_mbw.0/inventory.yaml'
 
-        LLC_LABELS="{additional_labels: {build_number: ${BUILD_NUMBER}, build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: "complex_llc.0"}}"
-        MBW_LABELS="{additional_labels: {build_number: ${BUILD_NUMBER}, build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: "complex_llc.0"}}"
+        LLC_LABELS="{additional_labels: {build_number: ${BUILD_NUMBER}, build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: \"complex_llc.0\"}}"
+        MBW_LABELS="{additional_labels: {build_number: ${BUILD_NUMBER}, build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: \"complex_mbw.0\"}}"
     }
     options {
         disableConcurrentBuilds()
