Fixing formatting issues

--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -9,7 +9,7 @@ whitelist_externals = pipenv
 commands =
     pipenv clean
     pipenv install --dev --deploy
-    pipenv run flake8 prm owca
+    pipenv run flake8 prm tests
 
 [testenv:unit]
 whitelist_externals = pipenv
