Fixing broken tests: path must be absolute when running tests using tox

--- a/prm/tox.ini
+++ b/prm/tox.ini
@@ -16,7 +16,7 @@ whitelist_externals = pipenv
 commands =
     pipenv clean
     pipenv install --dev --deploy
-    pipenv run pytest --cov-report term-missing --cov=prm --cov=calculate_accuracy.py tests
+    pipenv run pytest --cov-report term-missing --cov=prm tests
 
 [testenv:package]
 noinstall = True
