--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
     environment {
-        HOSTS_INVENTORY='prm/demo_scenarios/common/inventory.yaml'
         PLAYBOOK='prm/owca/workloads/run_workloads.yaml'
+        INVENTORY='prm/demo_scenarios/common/inventory.yaml'
         LLC_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
 
@@ -70,10 +70,10 @@ pipeline {
                 sh '''
                 env
                 cd prm/owca/workloads
-                ansible-inventory -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${COMMON_INVENTORY} -y --list all
-                ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${COMMON_INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}
+                ansible-inventory -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} -y --list all
+                ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}
                 # sleep 600
-                # ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${COMMON_INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}
+                # ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}
                 # sleep 300
                 '''
             }
